# genomics

./: .gitignore  REFACTORING_GUIDE.md  browse_genome.py  default.yaml  demo_browser.py  example_gene_library.py  example_genome_iterator.py  local.yaml  ml_integration_example.py  nice_cmds  pyproject.toml  pyrightconfig.json  requirements.txt  split-chrom-map.py  test.txt  test_dyad_class.py  test_enhanced_browser.py  test_highlight.py  test_indexmap.py  test_indexmap_corrected.py  test_indexmap_final.py  test_indexmap_fixed.py  test_ribosome.py  test_strand_fixes.py  test_unified_annotations.py  view.txt
.claude/agents/: debug-engineer.md
archive/: _draw.py  genemap_migration.py  genome_iterator.py  seqs.py
data/: chrom10_map.json  chrom11_map.json  chrom12_map.json  chrom13_map.json  chrom14_map.json  chrom15_map.json  chrom16_map.json  chrom17_map.json  chrom18_map.json  chrom19_map.json  chrom1_map.json  chrom20_map.json  chrom21_map.json  chrom22_map.json  chrom2_map.json  chrom3_map.json  chrom4_map.json  chrom5_map.json  chrom6_map.json  chrom7_map.json  chrom8_map.json  chrom9_map.json  chromMT_map.json  chromX_map.json  chromY_map.json
examples/: config_menu_example.py  default_keybindings.yaml  demo_browser.py  example_gene_library.py  example_genome_iterator.py  keybindings_example.py  layout_example.py  ml_integration_example.py  scalar_plot_demo.py
ggene/: __init__.py  config.py  draw.py  external_databases.py  features.py  genemap.py  genome_browser.py  genome_browser_gui.py  genome_browser_v2.py  genome_iterator.py  genome_iterator_backup.py  genome_iterator_v2.py  genomemanager.py  heal.py  homology.py  index_utils.py  motif.py  ruler.py  scalar_plot.py  seqs.py  sequence_stream.py  transcribe.py  translate.py  unified_stream.py  utils.py
ggene/browser/: base_browser.py  commands.py  config_menu.py  genome_browser.py  genome_browser_gui.py  genome_browser_v2.py  utils.py
ggene/browser/bindings/: __init__.py  defaults.py  dual.py  info.py  nav.py  save.py
ggene/browser/builds/: comp_browser.py  exp_browser.py  (+6 more)
ggene/database/: annotations.py  cache.py  databases.py  download.py  gene_info.py  genemap.py  genome_iterator.py  genome_library.py  genome_manager.py  genomemanager.py  library.py  motifs.py  search.py  sequence_stream.py  sequences.py  ufeature.py  unified_stream.py
ggene/dev/: cluster_syllabics.py  dfam_utils.py  external_databases.py  features_rebuild.py  nttx.py  render_syllabics.py  syllabics_clusters.json  te_parser.py
ggene/display/: amino_acid_display.py  artist.py  colors.py  display_renderer_old.py  feature_display.py  formatters.py  layout.py  renderer.py  sequence_display.py
ggene/draw/: __init__.py  chars.py  color.py  colored_sequence.py  colors.py  format.py  heatmap.py  highlight.py  logo.py  ruler.py  scalar_plot.py  tab.py  utils.py
ggene/genome/: __init__.py  features.py  genes.py  homology.py  mirna.py  ncrna.py  pseudo.py  te.py  translate.py
ggene/motifs/: __init__.py  dyad.py  dyad_class.py  dyad_old.py  hmm.py  jaspar.py  metric.py  mlmotif.py  motif.py  motifio.py  msats.py  pattern.py  pwm.py  regex_patterns.py  repeat.py  streaming_motif.py  structural.py  utils.py
ggene/ngrams/: base.py  ngramtree.py
ggene/processing/: chrome_mapper.py  coordinate_mapper.py  feature_processor.py  sequence_processor.py
ggene/seqs/: align.py  binary.py  bio.py  combi.py  compare.py  find.py  gen.py  heal.py  lambdas.py  manipulate.py  process.py  repeats.py  vocab.py
ggene/utils/: te_trie.py  utils.py
launch/: launch_browser.py  launch_exp_browser.py  launch_org_browser.py  run_justlines_browser.py  run_scalar_browser.py  run_seqs_browser.py  run_test_browser.py
scripts/: browse_features.py  cache_chrom_data.py  check_aas.py  check_vars.py  dev_align_again.py  dev_baseseq.py  dev_better_align.py  dev_binseq.py  dev_chrom_display.py  dev_codon_mutn.py  dev_codon_order.py  dev_combi.py  dev_dyad.py  dev_dyad2.py  dev_dyad3.py  dev_dyad4.py  dev_heal.py  dev_indexmap.py  dev_intron_motifs.py  dev_motifs.py  dev_phylo.py  dev_rpt_motifs.py  dev_rpts.py  dev_rpts2.py  dev_rpts3.py  dev_rpts4.py  dev_scales.py  dev_tes.py  download_data.py  extract_loops.py  find_big_vars.py  find_long_devs.py  list_cpg_codons.py  list_mirnas.py  make_cache.py  make_chrom_maps.py  save_genes.py  search_features.py  show_colors.py  show_difference.py  (+16 more)
tests/: list_mirnas.py  test_aligned_iterator.py  test_browser_quick.py  test_browser_with_motifs.py  test_continuous_iteration.py  test_discovery.py  test_enhanced_browser.py  test_genome_iterator_v2.py  test_gm.py  test_gui.py  test_improved_iterator.py  test_indexed_access.py  test_motif_browser.py  test_motif_browser_detailed.py  test_ncrna.py  test_ribosome.py  test_strand_fixes.py  test_unified_annotations.py  test_unified_integration.py  test_unified_streaming.py  test_variant_display.py  try_jaspar.py
(+15 files in other folders)
