[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ggene"
version = "0.1.0"
description = "just pokin around in DNA. it tells the stories of our ancestors!"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "gront", email = "gront@gront.gront"},
]
keywords = ["genomics", "bioinformatics", "dna", "genome-browser", "vcf", "gtf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ggene*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
ggene = ["*.json", "data/*"]


[tool.pyright]
typeCheckingMode = "off"
